# server/app/Http/Controllers/AuthController.php
@@ -2,9 +2,11 @@
 
 namespace App\Http\Controllers;
 
+use App\Models\User;
 use Exception;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
+use Illuminate\Support\Facades\Hash;
 use Illuminate\Validation\ValidationException as ValidationValidationException;
 
 class AuthController extends Controller
@@ -30,5 +32,23 @@ class AuthController extends Controller
         } else {
             return response()->json(['error' => 'Unauthenticated'], 401);
         }
+    }
+
+    public function register(Request $request)
+    {
+        $request->validate([
+            'name' => 'required|string|min:5|max:50',
+            'email' => 'required|email|unique:users',
+            'password' => 'required',
+            'confirmPassword' => 'required|same:password',
+        ]);
+
+        $user = User::create([
+            'name' => $request->input('name'),
+            'email' => $request->input('email'),
+            'password' => Hash::make($request->input('password')),
+        ]);
+
+        return response()->json(['success' => true, 'data' => $user], 201);
     }
 }
